Move DTO to Java Records